added check if smallest can fit in firing mode